validation checked up to login page

--- a/Pages/checkout.html
+++ b/Pages/checkout.html
@@ -844,7 +844,8 @@
 
                                 <div class="my-mt-3">
                                     <div class="my-input-control">
-                                        <textarea name="" placeholder="write delivary instructions" id=""></textarea>
+                                        <textarea name="instructions" id="instructions"
+                                            placeholder="write delivary instructions"></textarea>
                                         <p class="my-fs-xs">Add instructions for how you want your order shopped
                                             and/or delivered</p>
                                     </div>
@@ -890,9 +891,10 @@
 
 
                                                 <div class="my-input-control">
-                                                    <label class="label" for="ex-date">Expiry date</label>
-                                                    <input type="date" placeholder="Enter Expiry Date" id="ex-date">
+                                                    <label class="label" for="ex-date">Expiry Date</label>
+                                                    <input type="date" id="ex-date">
                                                 </div>
+
 
                                                 <div class="my-input-control">
                                                     <label class="label" for="cvc-number">CVC Code</label>
@@ -1926,7 +1928,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -1975,7 +1977,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -2028,7 +2030,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -2076,7 +2078,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -2183,11 +2185,10 @@
                 </div>
 
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue
-                            Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span>
-                    </button>
+                    <a class="my-btn my-primary-btn" href="index.html">Continue
+                        Shopping</a>
+                    <a href="../Pages/checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -2201,6 +2202,7 @@
         <button class="message-btn active my-flex-center" id="message-btn">
             <i class="fa-brands fa-facebook-messenger"></i>
         </button>
+
 
 
 
@@ -2221,8 +2223,8 @@
 
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
                             <div class="my-input-control">
-                                <input type="text" id="name" required>
-                                <label class="label" for="name">Name</label>
+                                <input type="text" id="signin-name" required>
+                                <label class="label" for="signin-name">Name</label>
                                 <p class="error-text error-text-show">
                                     please enter name</p>
                             </div>
@@ -2233,8 +2235,8 @@
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-signup" required>
+                                <label class="label" for="password-signup">Password</label>
                             </div>
 
                             <div>
@@ -2285,13 +2287,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email-signin" required>
+                                <label class="label" for="email-signin">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-singin" required>
+                                <label class="label" for="password-singin">Password</label>
                             </div>
 
                             <div>
@@ -2331,7 +2333,7 @@
                                 </p>
 
                                 <p class="my-fs-xs">Loss your password?
-                                    <button id="register-btn" class="my-fw-bold my-text-primary my-fs-xs">forgot
+                                    <button class="my-fw-bold my-text-primary my-fs-xs">forgot
                                         password</button>
                                 </p>
                             </div>
@@ -2341,6 +2343,7 @@
                 </div>
             </div>
         </div>
+
 
 
 
