--- a/Pages/forgot.html
+++ b/Pages/forgot.html
@@ -811,7 +811,6 @@
                     </div>
                 </div>
             </div>
-            </div>
 
             <!--_________  Footer Bottom  ________-->
             <div class="footer-bottom">
@@ -931,7 +930,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -980,7 +979,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -1033,7 +1032,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -1081,7 +1080,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -1187,10 +1186,10 @@
                     </div>
                 </div>
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue
-                            Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span></button>
+                    <a class="my-btn my-primary-btn" href="index.html">
+                        <span>Continue
+                            Shopping</span></a>
+                    <a href="../Pages/checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span></a>
                 </div>
             </div>
         </div>
@@ -1231,13 +1230,13 @@
                             </div>
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="signin-email" required>
+                                <label class="label" for="signin-email">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-signup" required>
+                                <label class="label" for="password-signup">Password</label>
                             </div>
 
                             <div>
@@ -1249,10 +1248,10 @@
 
                         <!-- or -->
                         <div>
-                            <div class="border my-mt-4">
-                                -----------------------------
+                            <div class="border my-mt-4 my-flex-between">
+                                -------------------
                                 <span class="my-d-inline-block my-px-1">OR</span>
-                                ----------------------------
+                                -------------------
                             </div>
 
                             <div class="other-option my-flex-between my-mt-2">
@@ -1288,13 +1287,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email-signin" required>
+                                <label class="label" for="email-signin">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-singin" required>
+                                <label class="label" for="password-singin">Password</label>
                             </div>
 
                             <div>
@@ -1334,7 +1333,7 @@
                                 </p>
 
                                 <p class="my-fs-xs">Loss your password?
-                                    <button id="register-btn" class="my-fw-bold my-text-primary my-fs-xs">forgot
+                                    <button class="my-fw-bold my-text-primary my-fs-xs">forgot
                                         password</button>
                                 </p>
                             </div>
@@ -1344,7 +1343,6 @@
                 </div>
             </div>
         </div>
-
 
 
         <!-- ******************************************** -->
