--- a/Pages/invoice.html
+++ b/Pages/invoice.html
@@ -502,7 +502,7 @@
 
                     <!--*****  Top   *****-->
                     <div class="top my-flex-between">
-                        <h3>Thank You <span class="my-text-primary">Tanvir</span>, <div>Here Your Order Details</div>
+                        <h3>Thank You <span class="my-text-primary">Tanvir</span>, <span>Here Your Order Details</span>
                         </h3>
                         <div>
                             <button class="my-btn my-primary-btn">
