--- a/Pages/blogs.html
+++ b/Pages/blogs.html
@@ -685,7 +685,7 @@
             <!-- ************************************ -->
             <!--        Brigthcamp  Start Here         -->
             <!-- ************************************ -->
-            <section class="brigtcamp ">
+            <section class="brigtcamp">
                 <div class="my-container   my-pb-0">
                     <ul class="my-d-flex my-mt-2 my-align-center my-gap-5   brigtcamp-area contact-page">
                         <li><a href="../index.html">Home</a> </li>
@@ -1982,7 +1982,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -2031,7 +2031,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -2084,7 +2084,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -2132,7 +2132,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -2239,11 +2239,10 @@
                 </div>
 
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue
-                            Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span>
-                    </button>
+                    <a class="my-btn my-primary-btn" href="../index.html">Continue
+                        Shopping</a>
+                    <a href="../Pages/checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -2289,8 +2288,8 @@
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-signup" required>
+                                <label class="label" for="password-signup">Password</label>
                             </div>
 
                             <div>
@@ -2341,13 +2340,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email-signin" required>
+                                <label class="label" for="email-signin">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-singin" required>
+                                <label class="label" for="password-singin">Password</label>
                             </div>
 
                             <div>
@@ -2387,7 +2386,7 @@
                                 </p>
 
                                 <p class="my-fs-xs">Loss your password?
-                                    <button id="register-btn" class="my-fw-bold my-text-primary my-fs-xs">forgot
+                                    <button class="my-fw-bold my-text-primary my-fs-xs">forgot
                                         password</button>
                                 </p>
                             </div>
