--- a/index.html
+++ b/index.html
@@ -873,8 +873,47 @@
 
 
 
+
+
             <!-- ************************************ -->
-            <!--         Top Category Start  Here       -->
+            <!--      Banner Two Section End  Here    -->
+            <!-- ************************************ -->
+            <section class="">
+                <div class="my-container">
+                    <div class="banner-two my-grid-2 my-gap-3">
+
+                        <!-- banner item -->
+                        <div class="left item my-flex-center my-justify-start my-px-5">
+                            <div class="content my-align-start  my-flex-column">
+                                <h4>Fruits & Vegetables</h4>
+                                <p>Get Upto 30% Off</p>
+                                <div class="my-mt-3">
+                                    <a href="./Pages/shop.html" class="my-btn my-secendary-btn"><span>SHOP</span></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- banner item -->
+                        <div class="right item my-flex-center my-justify-start my-px-5">
+                            <div class="content my-align-start  my-flex-column">
+                                <h4>Fruits & Vegetables</h4>
+                                <p>Get Upto 30% Off</p>
+                                <div class="my-mt-3">
+                                    <a href="./Pages/shop.html" class="my-btn my-secendary-btn"><span>SHOP</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+
+
+            <!-- ************************************ -->
+            <!--         Top Category Start  Here     -->
             <!-- ************************************ -->
             <section class="section-margin top-categories">
                 <div class="my-container">
@@ -1028,12 +1067,12 @@
                             <div class="deal-item-content ">
                                 <div>
                                     <div class="disount my-flex-center">22% OFF</div>
-                                    <a href="#" class=" my-w-100 my-uppercase">
+                                    <a href="#" class=" my-w-100 my-mt-1 my-uppercase">
                                         <h3 class="name">
                                             shampoo, conditioner &amp; facewash packs
                                         </h3>
                                     </a>
-                                    <p class="my-fs-md my-mt-3 description my-d-sm-none">This item is Lorem, ipsum dolor
+                                    <p class="my-fs-sm my-mt-4 description my-d-sm-none">This item is Lorem, ipsum dolor
                                         sit amet
                                         heir color and shining Lorem ipsum dolor sit amet dolor sit amet , ipsum.<span>.
                                             . .
@@ -1042,7 +1081,7 @@
                                 </div>
 
                                 <!-- _____  Price _____ -->
-                                <div class="prices my-d-flex my-align-center my-gap-4 my-mt-5">
+                                <div class="prices my-d-flex my-align-center my-gap-4 my-mt-6">
                                     <strong class="new-price my-fs-xl">$12.00</strong>
                                     <del class=" old-price my-fs-md">$14.00</del>
                                 </div>
@@ -1079,7 +1118,7 @@
                                 </div>
 
                                 <!-- Offer Count -->
-                                <div class="offer my-mt-5">
+                                <div class="offer my-mt-6">
                                     <div class="offer-title uppercase">
                                         Hurry up! offer ends in:
                                     </div>
@@ -1118,24 +1157,24 @@
                             <div class="deal-item-content ">
 
                                 <div>
-                                    <div class="disount my-flex-center">22% OFF</div>
-                                    <a href="#" class=" my-w-100 my-uppercase">
+                                    <div class="disount my-flex-center">20% OFF</div>
+                                    <a href="#" class=" my-w-100 my-mt-1 my-uppercase">
                                         <h3 class="name">
                                             Childern Gamming fddd ssd for Toy For Boy
                                         </h3>
                                     </a>
                                 </div>
 
-                                <div class="my-d-flex my-align-center my-gap-6 rating-price">
+                                <div class="my-d-flex my-align-center my-gap-6 rating-price my-mt-6">
                                     <!-- _____Price_____ -->
-                                    <div class="prices my-d-flex my-align-center my-gap-3 my-mt-4">
+                                    <div class="prices my-d-flex my-align-center my-gap-3 ">
                                         <strong class="new-price my-fs-xl">$12.00</strong>
                                         <del class=" old-price my-fs-md">$14.00</del>
                                     </div>
 
                                     <!-- _____Rating_____ -->
                                     <div class="my-d-flex my-gap-1   my-align-center rating-wrapper">
-                                        <a href="#" class="rating d-flex my-mt-3">
+                                        <a href="#" class="rating d-flex my-mt-2">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -1168,7 +1207,7 @@
                                 </div>
 
                                 <!-- Offer Count -->
-                                <div class="offer my-mt-5">
+                                <div class="offer my-mt-6">
                                     <div class="offer-title uppercase">
                                         Hurry up! offer ends in:
                                     </div>
@@ -3272,7 +3311,7 @@
                         <div class="items my-grid-3 my-gap-7 my-mt-6 my-grid-md-2 my-grid-sm-1">
 
                             <!-- single item -->
-                            <div class="my-card my-flex-column my-gap-4">
+                            <div class="my-card my-radius-lg my-flex-column my-gap-4">
                                 <div class="sl">01</div>
                                 <h3 class="my-mt-4">Choose Product</h3>
                                 <p>We have several varieties products you can choosen form.</p>
@@ -3825,8 +3864,6 @@
             <!-- ************************************ -->
             <!--        Brands  Section  End  Here     -->
             <!-- ************************************ -->
-
-
 
 
 
