html and css validation checked

--- a/Pages/order_complete.html
+++ b/Pages/order_complete.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A Good E-commerce Website.">
         <meta name="keywords"
-            content="Online shopping, Affordable products, Best deals, Discount offers, Buy products online, Shop now, Order online, Top quality products, Fast delivery, Secure online shopping, Product bazaar">
+            content="Online shopping, Affordable products, Best deals, Discount offers, Buy products online, Shop now, Order online, Top quality products, Fast delivery, Secure online shopping, Product bazaar,best item">
         <link rel="stylesheet" href="../Static/Css/common.css">
         <link rel="stylesheet" href="../Static/Css/pages/checkout.css">
         <title>Order_Completed_Page</title>
