--- a/Pages/register.html
+++ b/Pages/register.html
@@ -844,7 +844,6 @@
                     </div>
                 </div>
             </div>
-            </div>
 
             <!--_________  Footer Bottom  ________-->
             <div class="footer-bottom">
@@ -964,7 +963,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -1013,7 +1012,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -1066,7 +1065,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -1114,7 +1113,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -1210,7 +1209,7 @@
                                             <i class="fa-solid fa-bangladeshi-taka-sign"></i>
                                             <p class="my-fs-xs">299.00
                                             </p>
-                                        </del>
+                                        </del>id="review-open-btn"
                                     </div>
                                 </div>
                             </div>
@@ -1219,11 +1218,12 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue
-                            Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span></button>
+                    <a class="my-btn my-primary-btn" href="index.html">Continue
+                        Shopping</a>
+                    <a href="./checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -1257,20 +1257,20 @@
 
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
                             <div class="my-input-control">
-                                <input type="text" id="name" required>
-                                <label class="label" for="name">Name</label>
+                                <input type="text" id="signin_name" required>
+                                <label class="label" for="signin_name">Name</label>
                                 <p class="error-text error-text-show">
                                     please enter name</p>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="signin-email" required>
+                                <label class="label" for="signin-email">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-signup" required>
+                                <label class="label" for="password-signup">Password</label>
                             </div>
 
                             <div>
@@ -1282,10 +1282,10 @@
 
                         <!-- or -->
                         <div>
-                            <div class="border my-mt-4">
-                                -----------------------------
+                            <div class="border my-mt-4 my-flex-between">
+                                -------------------
                                 <span class="my-d-inline-block my-px-1">OR</span>
-                                ----------------------------
+                                -------------------
                             </div>
 
                             <div class="other-option my-flex-between my-mt-2">
@@ -1321,13 +1321,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email-signin" required>
+                                <label class="label" for="email-signin">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-singin" required>
+                                <label class="label" for="password-singin">Password</label>
                             </div>
 
                             <div>
@@ -1367,7 +1367,7 @@
                                 </p>
 
                                 <p class="my-fs-xs">Loss your password?
-                                    <button id="register-btn" class="my-fw-bold my-text-primary my-fs-xs">forgot
+                                    <button class="my-fw-bold my-text-primary my-fs-xs">forgot
                                         password</button>
                                 </p>
                             </div>
@@ -1377,7 +1377,6 @@
                 </div>
             </div>
         </div>
-
 
 
         <!-- ******************************************** -->
