--- a/Pages/shop.html
+++ b/Pages/shop.html
@@ -1042,13 +1042,14 @@
                                     </div>
                                     <div class="range-price">
                                         <div>
-                                            <label for="min">Min</label>
-                                            <input type="number" name="min" value="300">
+                                            <label for="min_val">Min</label>
+                                            <input type="number" id="min_val" name="min_val" value="300">
                                         </div>
                                         <div>
-                                            <label for="max">Max</label>
-                                            <input type="number" name="max" value="700">
+                                            <label for="max_val">Max</label>
+                                            <input type="number" id="max_val" name="max_val" value="700">
                                         </div>
+
                                     </div>
                                 </div>
                             </div>
@@ -1129,7 +1130,7 @@
                                 </div>
 
                                 <div class="right my-d-flex my-align-center my-gap-2 my-w-100 my-flex-md-between">
-                                    <select name="" class="my-border2" id="">
+                                    <select name="select_one" class="my-border2" id="select_one">
                                         <option value="">Select</option>
                                         <option value="">Avg Rating</option>
                                         <option value="">A-Z Name</option>
@@ -3165,7 +3166,7 @@
                                                     <span class="my-mr-2">
                                                         <i class="fa-regular my-text-white fa-copy"></i></span>
                                                     Copy
-                                                    <div class="show-text">URL COPY</div>
+                                                    <span class="show-text">URL COPY</span>
                                                 </button>
                                             </div>
                                         </div>
@@ -3496,7 +3497,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2" border="0">
+                                        <img src="https://i.ibb.co.com/qgQ6k1b/cart-2.jpg" alt="cart-2">
                                     </div>
 
                                     <!-- information -->
@@ -3545,7 +3546,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3" border="0">
+                                        <img src="https://i.ibb.co.com/Yp1Sgz9/cart-3.jpg" alt="cart-3">
                                     </div>
 
                                     <!-- information -->
@@ -3598,7 +3599,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4" border="0">
+                                        <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
                                     </div>
 
                                     <!-- information -->
@@ -3646,7 +3647,7 @@
                                 <div class="left my-d-flex my-align-start my-gap-4">
                                     <!-- image -->
                                     <div class="img">
-                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5" border="0">
+                                        <img src="https://i.ibb.co.com/pfqNHWp/cart-5.jpg" alt="cart-5">
                                     </div>
 
                                     <!-- information -->
@@ -3753,11 +3754,10 @@
                 </div>
 
                 <div class="footer my-flex-between">
-                    <button class="my-btn my-primary-btn"><a href="index.html">Continue
-                            Shopping</a></button>
-                    <button class="my-secendary-btn my-btn"><span>Update
-                            Cart</span>
-                    </button>
+                    <a class="my-btn my-primary-btn" href="index.html">Continue
+                        Shopping</a>
+                    <a href="./checkout.html" class="my-secendary-btn my-btn"><span>Checkout</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -3791,20 +3791,20 @@
 
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
                             <div class="my-input-control">
-                                <input type="text" id="name" required>
-                                <label class="label" for="name">Name</label>
+                                <input type="text" id="signin_name" required>
+                                <label class="label" for="signin_name">Name</label>
                                 <p class="error-text error-text-show">
                                     please enter name</p>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="signin-email" required>
+                                <label class="label" for="signin-email">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-signup" required>
+                                <label class="label" for="password-signup">Password</label>
                             </div>
 
                             <div>
@@ -3855,13 +3855,13 @@
                         <form action="#" class="my-mt-10 my-flex-column my-gap-5">
 
                             <div class="my-input-control">
-                                <input type="email" id="email" required>
-                                <label class="label" for="email">Email</label>
+                                <input type="email" id="email-signin" required>
+                                <label class="label" for="email-signin">Email</label>
                             </div>
 
                             <div class="my-input-control">
-                                <input type="text" id="passowrd" required>
-                                <label class="label" for="password">Password</label>
+                                <input type="text" id="password-singin" required>
+                                <label class="label" for="password-singin">Password</label>
                             </div>
 
                             <div>
@@ -3901,7 +3901,7 @@
                                 </p>
 
                                 <p class="my-fs-xs">Loss your password?
-                                    <button id="register-btn" class="my-fw-bold my-text-primary my-fs-xs">forgot
+                                    <button class="my-fw-bold my-text-primary my-fs-xs">forgot
                                         password</button>
                                 </p>
                             </div>
